target/classes/META-INF/fabric8/openshift/fuse75-spring-boot-javadsl-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=fuse75-spring-boot-javaDSL&var-version=com.redhat.camelProxyJavaDSL
    fabric8.io/scm-con-url: scm:git:git@github.com:jboss-fuse/redhat-fuse.git
    fabric8.io/scm-devcon-url: scm:git:git@github.com:jboss-fuse/redhat-fuse.git
    fabric8.io/scm-tag: master
  labels:
    app: fuse75-spring-boot-javaDSL
    provider: fabric8
    version: com.redhat.camelProxyJavaDSL
    group: com.redhat.camelProxyJavaDSL
  name: fuse75-spring-boot-javadsl
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: fuse75-spring-boot-javaDSL
    provider: fabric8
    group: com.redhat.camelProxyJavaDSL
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=fuse75-spring-boot-javaDSL&var-version=com.redhat.camelProxyJavaDSL
        fabric8.io/scm-con-url: scm:git:git@github.com:jboss-fuse/redhat-fuse.git
        fabric8.io/scm-devcon-url: scm:git:git@github.com:jboss-fuse/redhat-fuse.git
        fabric8.io/scm-tag: master
      labels:
        app: fuse75-spring-boot-javaDSL
        provider: fabric8
        version: com.redhat.camelProxyJavaDSL
        group: com.redhat.camelProxyJavaDSL
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"undertow":{"io-threads":1, "worker-threads":2 }}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: fuse75-spring-boot-javadsl:com.redhat.camelProxyJavaDSL
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: fuse75-spring-boot-javadsl:com.redhat.camelProxyJavaDSL
    type: ImageChange
