target/classes/META-INF/fabric8/openshift/fuse75-spring-boot-javadsl-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: fuse75-spring-boot-javaDSL
    provider: fabric8
    version: com.redhat.camelProxyJavaDSL
    group: com.redhat.camelProxyJavaDSL
  name: fuse75-spring-boot-javadsl
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fuse75-spring-boot-javadsl
